--- a/ng5/src/app/home/home.component.html
+++ b/ng5/src/app/home/home.component.html
@@ -1,3 +1,23 @@
-<p>
-  home works!
-</p>
+<div class="container color-dark">
+  <div class="col">
+    <p>Add a bucket list item</p>
+  </div>
+  <div class="col">
+    <p>your bucket list</p>
+  </div>
+</div>
+
+<div class="container color-light">
+  <div class="col">
+    <p class="sm">Use this form below to add a new bucket list.</p>
+    <form>
+      <input type="txt" class="txt" name="item" placeholder="Life goal..">
+      <input type="submit" class="btn" value="Add Item">
+    </form>
+  </div>
+  <div class="col">
+    <p class="life-container">
+      I want to clim a mountain
+    </p>
+  </div>
+</div>
