binding properties to home

--- a/ng5/src/app/home/home.component.scss
+++ b/ng5/src/app/home/home.component.scss
@@ -27,6 +27,7 @@ input.btn {
     color:#003A61;
     margin-bottom:1em;
     cursor:pointer;
+    border-radius: 3px;
 }
 .life-container {
     background:#3FA0E1;
