added 2 way data binding

--- a/ng5/src/app/home/home.component.html
+++ b/ng5/src/app/home/home.component.html
@@ -11,7 +11,8 @@
   <div class="col">
     <p class="sm">Use this form below to add a new bucket list.</p>
     <form>
-      <input type="txt" class="txt" name="item" placeholder="Life goal..">
+      <input type="txt" class="txt" name="item" placeholder="Life goal.." [(ngModel)]="goalText">
+      <br><span>{{ goalText }}</span>
       <input type="submit" class="btn" value="{{ btnText }}">
     </form>
   </div>
